--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,9 @@ edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
+[build]
+script = "script/build.rs"
+
 [dependencies]
 rustyline = "7.1.0"
 lazy_static = "1.4.0"
