--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,3 +19,4 @@ ansi_term = "0.12.1"
 clap = { version = "4.3.11", features = ["derive"] }
 regex = "1.9.0"
 eval = "0.4.3"
+qemu_difftest = {path = "../qemu-diff"}
