riscv-test should not add to ci now

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -9,11 +9,11 @@ jobs:
       uses: actions/checkout@master
     - name: test
       run: RUST_TEST_THREADS=1 cargo test --test am-tests
-  riscv-test:
-    name: riscv-test
-    runs-on: ubuntu-latest
-    steps:
-    - name: checkout
-      uses: actions/checkout@master
-    - name: test
-      run: RUST_TEST_THREADS=1 cargo test --test riscv-tests
+  # riscv-test:
+  #   name: riscv-test
+  #   runs-on: ubuntu-latest
+  #   steps:
+  #   - name: checkout
+  #     uses: actions/checkout@master
+  #   - name: test
+  #     run: RUST_TEST_THREADS=1 cargo test --test riscv-tests
