--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -8,12 +8,12 @@ jobs:
     - name: checkout
       uses: actions/checkout@master
     - name: test
-      run: RUST_TEST_THREADS=1 cargo test --test am-tests
-  # riscv-test:
-  #   name: riscv-test
-  #   runs-on: ubuntu-latest
-  #   steps:
-  #   - name: checkout
-  #     uses: actions/checkout@master
-  #   - name: test
-  #     run: RUST_TEST_THREADS=1 cargo test --test riscv-tests
+      run: cargo test --test am-tests
+  riscv-test:
+    name: riscv-test
+    runs-on: ubuntu-latest
+    steps:
+    - name: checkout
+      uses: actions/checkout@master
+    - name: test
+      run: cargo test --test riscv-tests
