Update device compatibility and model in hemu.dts and rom.rs

--- a/hemu.dts
+++ b/hemu.dts
@@ -3,8 +3,8 @@
 / {
     #address-cells = <0x02>;
     #size-cells = <0x02>;
-    compatible = "riscv-virtio";
-    model = "riscv-virtio,qemu";
+    compatible = "hdu,hemu";
+    model = "hdu,hemu";
 
     chosen {
         bootargs = "root=/dev/vda ro console=ttyS0";
