--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,6 +3,13 @@ name = "hemu"
 version = "0.1.0"
 edition = "2021"
 
+build = "build.rs"
+
 [dependencies]
+verilated = { path = "../../Miscellaneous/verilated-rs/verilated" }
+verilated-module = { path = "../../Miscellaneous/verilated-rs/verilated-module" }
 clap = { version = "4.3.11", features = ["derive"] }
 anyhow = "1.0.80"
+
+[build-dependencies]
+verilator = { path = "../../Miscellaneous/verilated-rs/verilator", features = ["gen", "module"] }
