--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -33,3 +33,11 @@ jobs:
       uses: actions/checkout@master
     - name: test
       run: cargo test --test riscv-tests-rv64si
+  riscv-test-rv64um:
+    name: riscv-test-rv64um
+    runs-on: ubuntu-latest
+    steps:
+    - name: checkout
+      uses: actions/checkout@master
+    - name: test
+      run: cargo test --test riscv-tests-rv64um
