--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,10 +6,10 @@ edition = "2021"
 build = "build.rs"
 
 [dependencies]
-# verilated = { path = "../../Miscellaneous/verilated-rs/verilated" }
-# verilated-module = { path = "../../Miscellaneous/verilated-rs/verilated-module" }
+verilated = { path = "./verilator/verilated" }
+verilated-module = { path = "./verilator/verilated-module" }
 clap = { version = "4.3.11", features = ["derive"] }
 anyhow = "1.0.80"
 
-# [build-dependencies]
-# verilator = { path = "../../Miscellaneous/verilated-rs/verilator", features = ["gen", "module"] }
+[build-dependencies]
+verilator = { path = "./verilator/verilator", features = ["gen", "module"] }
