--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "verilator"]
-	path = verilator
+[submodule "dependencies/verilated-rs"]
+	path = dependencies/verilated-rs
 	url = git@github.com:Anillc/verilated-rs.git
