--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,8 @@ clap = { version = "4.3.11", features = ["derive"] }
 anyhow = "1.0.80"
 tracing = "0.1.40"
 tracing-subscriber = { version = "0.3", features = ["env-filter"] }
+crossterm = "0.27.0"
+ratatui = "0.26.2"
 
 [build-dependencies]
 verilator = { path = "./dependencies/verilated-rs/verilator", features = ["gen", "module"] }
